# quantum_gear

./: .gitignore  1.py  CMakeLists.txt  CMakeLists.txt.user.00421c7  CMakeLists.txt.user.33708fe  README.md  codetextedit.h  console.cpp  console.h  linenumberarea.cpp  main.cpp  mainwindow.cpp  mainwindow.h  projectexplorer.cpp  pythonhighlighter.cpp  pythonhighlighter.h  resources.qrc  Диплом .docx  Диплом.docx
src/: codehighlighter.cpp  codehighlighter.h  codetextedit.cpp  console.cpp  console.h  dialogfilename.cpp  dialogfilename.h  dialogfilename.ui  introwindow.cpp  introwindow.h  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  projectexplorer.cpp  projectexplorer.h  pythonhighlighter.cpp  pythonhighlighter.h  startmenu.cpp  startmenu.h  startmenu.ui  startwindow.cpp  startwindow.h  style.qss
